# courseCG

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  ColorControlWidget.cpp  ColorControlWidget.h  ControlPanel.cpp  ControlPanel.h  INTERFACES_AND_FUNCTIONS.md  LightDirectionControl.cpp  LightDirectionControl.h  MainWindow.cpp  MainWindow.h  QT_GUIDELINES.md  README.md  README_VS_CODE.md  RendererGUI  RenderingWidget.h  buildingsTest.py  cityGeneration.graphml  cmake_install.cmake  createBuuilding.py  cur_KG.odt  frame.txt  kiosk_pechat.json  makefile  panel_house.json  program.pro  prompt_building.txt  prompt_v2.txt  soviet_apartment.json  test_smart_selector.cmake  test_smart_selector.cpp  Кг алгоритм (начальный).graphml  Кг алгоритм (начальный).json
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
RendererGUI_autogen/: deps
RendererGUI_autogen/EWIEGA46WW/: moc_MainWindow.cpp.d
buildings/: blue_stepped_building_with_nested_frames.json  business_center.json  business_center_fiolet.json  business_center_gray.json  coffee_beige_5p.json  coffee_beige_5x4.json.p  coffee_beige_7p.json  grand_historical_building.json  kiosk_pechat_automatic.json  kotelnaya.json  light_sand_5x4.json  light_sand_7p.json  orange_stepped_building_with_nested_frames.json  panel_house_9floor.json  panel_house_high.json  seven_story_house_1.json  seven_story_house_2.json  seven_story_house_3.json  seven_story_house_4.json  seven_story_house_5.json  warm_cream_5p.json  warm_cream_7p.json
buildings/not_active/: bashnya.json  business_center.json  city_hall_1890.json  kiosk_pechat.json  panel_house.json  panel_house_coral.json  soviet_apartment copy.json  soviet_apartment_automatic.json
city/core/: AbstractRoad.h  CityMap.cpp  CityMap.h
city/objects/: BlockSeparatorRoad.cpp  BlockSeparatorRoad.h  BuildingModel.h  ResidentialRoad.cpp  ResidentialRoad.h
city/strategies/: AbstractBuildingSelector.h  AbstractCostStrategy.h  AbstractRoadGenerationStrategy.h  DistanceFromCenterCostStrategy.cpp  DistanceFromCenterCostStrategy.h  SimpleBuildingSelector.cpp  SimpleBuildingSelector.h  SimpleRoadGenerationStrategy.cpp  SimpleRoadGenerationStrategy.h  SmartBuildingSelector.cpp  SmartBuildingSelector.h  SubdivisionRoadGenerationStrategy.cpp  SubdivisionRoadGenerationStrategy.h
generation_buildings/: angledpanels.py  balcony_house.py  brick_building.py  createBuilding.py  createBuuilding.py  new_panelka.py
generation_buildings/buildings/: coffee_beige_5p.json  coffee_beige_5x4.json  coffee_beige_7p.json  light_sand_5p.json  light_sand_5x4.json  light_sand_7p.json  warm_cream_5p.json  warm_cream_5x4.json  warm_cream_7p.json
program/: CMakeLists.txt  CMakePresets.json  ColorControlWidget.cpp  ColorControlWidget.h  ControlPanel.h  GlobalRandom.h  LightDirectionControl.cpp  MainWindow.cpp  MainWindow.h  RenderingWidget.cpp
program/buildings/: business_center_fiolet.json  business_center_gray.json  kiosk_pechat_automatic.json  kotelnaya.json  light_sand_5p.json  light_sand_7p.json  seven_story_house_2.json  seven_story_house_3.json  seven_story_house_4.json  seven_story_house_5.json  warm_cream_5x4.json
program/buildings/not_active/: bashnya.json  brick_7_story.json  panel_building_blue.json  panel_house_9floor.json  panel_house_lavender.json  panel_house_mint.json  panel_house_sky.json
program/city/core/: AbstractRoad.h  CityMap.cpp  CityMap.h
program/city/loaders/: ModelLoader.cpp  ModelLoader.h
program/city/objects/: BlockSeparatorRoad.cpp  BlockSeparatorRoad.h  BuildingModel.cpp  BuildingModel.h  ResidentialRoad.cpp  ResidentialRoad.h  RoadEnums.h
program/city/strategies/: AbstractRoadGenerationStrategy.h  SimpleBuildingSelector.cpp  SimpleBuildingSelector.h  SubdivisionRoadGenerationStrategy.cpp  SubdivisionRoadGenerationStrategy.h
program/generation_buildings/: createBuilding.py  historical.py  larek_Buiding.py  new_panelka.py
program/prompts/: prompt_v2.txt
program/renderer/: ColorBuffer.h  DirectionalLight.cpp  DirectionalLight.h  Light.h  Renderer.cpp  Renderer.h  Scene.h  ScreenBuffer.h  ShadeBuffer.h  TriangleRasterizer.cpp  TriangleRasterizer.h  ZBuffer.h  rastrizercommand.h
prompts/: houseprompt.txt  rpz_zametki.md
renderer/: Camera.h  DirectionalLight.cpp  DirectionalLight.h  Face.h  GraphicObject.cpp  GraphicObject.h  Light.h  ProjectionStrategy.h  Renderer.cpp  Renderer.h  Scene.h  ScreenBuffer.h  ShadeBuffer.h  TriangleRasterizer.cpp  TriangleRasterizer.h  rastrizercommand.h
report/: makefile
report/preza/: zbuf.graphml  Текст к презе.md
report/scripts/: Features_manual.md  extract_table_names.py  filter_graphic_names.py  generate_plot.py  generate_table.py  lint_tex.py
report/scripts/lint_tex_submodules/: links_linter.py  lint_logging.py  list_puctuation.py
report/src/: abstract.tex  additions.tex  analytic_part (1-я копия).tex.bkp  analytic_part (1-я копия).texе  analytic_part.tex  conclusion.tex  design_part.tex  experimental_part.tex  intro.tex  links.tex  preambula.tex  report.tex  tech_part.tex  title.tex
report/src/images/plantuml/: CityClassDiagram.plantuml  CityCreation.plantuml  ExportToScene.plantuml  Rasterization.plantuml  RendererCore.plantuml  SceneComposition.plantuml
report/src/tables/: issled.csv
